20211cit0156/deploy/kubernetes-config/calculator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-deployment
  labels:
    app: calculator
spec:
  replicas: 3
  selector:
    matchLabels:
      app: calculator
  template:
    metadata:
      labels:
        app: calculator
    spec:
      containers:
        - name: calculator
          image: niki2401/calculator-microservice:latest
          image: niki2401/calculator-microservice:latest
          ports:
            - containerPort: 9876
