20211cit0156/deploy/kubernetes-config/calculator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: calculator
  ports:
    - protocol: TCP
      port: 9876
