20211cit0156/deploy/kubernetes-config/calculator-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: calculator-ingress
spec:
  backend:
    serviceName: calculator
    servicePort: 9876
